# kanakanji-gpt2

./: .gitignore  README.md  pyproject.toml
data/: train.tsv  valid.tsv
scripts/: build_dataset.py  dataset_pipeline.py  eval_greedy.py  merge_lora.py  train_lora.py
scripts/hooks/: __init__.py  zenz_default.py
scripts/utils/: japanese_number_reading.py
